@@ -3355,6 +3355,16 @@ Th+-------------------------------------------------------------------------+
 	      </varlistentry>
 
 	      <varlistentry>
+		<term>Brown</term>
+		<listitem>
+		  <para>
+		    The package is currently installed, and it will be
+		    downgraded.
+		  </para>
+		</listitem>
+	      </varlistentry>
+
+	      <varlistentry>
 		<term>Magenta</term>
 		<listitem>
 		  <para>
