@@ -89,6 +89,13 @@ Version 0.7.3 UNRELEASED
     since 2007-2008 or earlier, so it is safe to disable the checks and the
     dead code.
 
+- Documentation:
+
+  * Guide/User's Manual:
+
+    * Document Brown colour for downgraded packages in UI (feature implemented
+      in the last version)
+
 
 [2015-09-17]
 Version 0.7.2
